--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ jacoco {
 
 
 repositories {
-
+mavenLocal()
     mavenCentral()
 }
 
@@ -195,6 +195,6 @@ dependencies {
     testImplementation 'org.testcontainers:junit-jupiter:1.19.1'
     testImplementation 'org.junit-pioneer:junit-pioneer:2.2.0'
 
-
+    implementation 'school.hei:patrimoine:1.0-SNAPSHOT'
 
 }
